# cpp-zero-to-hero

./: README.md
month1/code/hello_world/: Dockerfile  hello_world.cpp
month2/code/hello_world/: Dockerfile  hello_world.cpp
month2/slides/: rust-cpp-talk2-dtm.pptx
month3/slides/: rust-cpp-talk3-dtm.pptx
month4/cpp-starter-project/: CMakeLists.txt
month4/cpp-starter-project/src/: CMakeLists.txt  getMeHello.cpp  getMeHello.h  main.cpp
month4/cpp-starter-project/test/: CMakeLists.txt  main.cpp
